Fix typo `composer.json`

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
             "AzizSama\\MenuBuilder\\": "src/"
         },
         "files": [
-            "src/function.php"
+            "src/functions.php"
         ]
     },
     "authors": [
