Rename the package name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "azizsama/laravel-menu-builder",
+    "name": "azizsama/menu-builder",
     "description": "Easy Menu Builder for Laravel",
     "type": "library",
     "license": "MIT",
