Fix typo in `composer.json`

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "AzizSama\\MenuBuilder\\MenuBuilderServiceProvider"
+                "AzizSama\\MenuBuilder\\Providers\\MenuBuilderServiceProvider"
             ]
         }
     }
